home page + css

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -81,6 +81,11 @@ body {
   background: var(--white);
   color: var(--color-3);
 }
+
+.star-ranking img {
+  width: 25px;
+}
+
 .error {
   color: red;
   font-weight: bold;
