--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -76,11 +76,11 @@ i:hover {
   transform: scale(1.1);
 }
 
-body {
+/* body {
   line-height: 1.4rem;
   background: var(--white);
   color: var(--color-3);
-}
+} */
 
 .star-ranking img {
   width: 25px;
@@ -540,7 +540,7 @@ body {
   object-fit: cover;
 }
 
-nav {
+/* nav {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -585,6 +585,211 @@ nav a {
 .logout-icon {
   height: 35px;
   width: auto;
+} */
+
+app {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+li,
+a {
+  font-family: sans-serif;
+  text-decoration: none;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 5%;
+}
+
+.logo {
+  cursor: pointer;
+  max-width: 200px;
+}
+
+.nav {
+  list-style: none;
+}
+
+.nav li {
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.nav li a {
+  transition: all 0.3s ease 0s;
+  color: black;
+}
+
+.nav a:hover {
+  color: blue;
+}
+
+.profile-nav {
+  display: flex;
+  align-items: center;
+}
+
+.profile-link {
+  display: flex;
+  align-items: center;
+}
+
+.profile-logo {
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  margin-inline: 10px;
+  border-radius: 50%;
+  box-shadow: 0 0 6px black;
+}
+
+.profile-nav {
+  list-style: none;
+}
+
+.profile-nav li {
+  display: inline-block;
+  padding: 0px 10px;
+}
+
+.profile-nav li a {
+  transition: all 0.3s ease 0s;
+  color: black;
+}
+
+/* .banner {
+  overflow: hidden;
+  background-image: url(/image/pineapple3.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+} */
+
+.text-banner {
+  margin: 290px 50px 230px;
+}
+
+.text-banner {
+  font-family: sans-serif;
+  color: white;
+  text-shadow: 0.5px 0.5px black;
+  font-size: 24px;
+}
+
+.input-bar {
+  margin-top: 50px;
+  min-width: 600px;
+  height: 60px;
+  border: 2px solid white;
+  border-radius: 50px;
+  padding: 0 30px;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.column {
+  margin: 100px 150px 100px;
+  flex: 1;
+  font-family: sans-serif;
+  color: white;
+}
+
+/* .banner2 {
+  overflow: hidden;
+  background-image: url(/image/pineapple5.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+} */
+
+.student-image {
+  max-width: 100%;
+}
+
+.content {
+  max-width: 1200px;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.row1 {
+  display: flex;
+  flex-direction: row;
+}
+
+.column1 {
+  margin: 20px;
+  margin-right: 150px;
+  flex: 1;
+  font-family: sans-serif;
+}
+
+.column1 a {
+  margin-left: 370px;
+}
+
+.row2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.column2 {
+  flex: 1;
+  font-family: sans-serif;
+  text-align: center;
+  max-width: 50%;
+  background-color: #f4f4f4;
+  margin: 10px;
+  padding: 1rem;
+}
+
+.footer {
+  background-color: #f4f4f4;
+}
+.column3 {
+  margin: 50px 20px 15px;
+  padding-left: 50px;
+  max-width: 40%;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.column4 {
+  flex: 1;
+  margin: 0px 10px 20px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.column4 img {
+  max-width: 50px;
+  margin-right: 30px;
+}
+
+.text {
+  margin-left: 400px;
+  margin-top: 80px;
+}
+
+.course-photo {
+  width: 100%;
+}
+.star img {
+  width: 100%;
+}
+.star-image {
+  max-width: 20px;
+  margin-bottom: 10px;
+}
+
+.nav1 {
+  list-style: none;
 }
 
 .popup-profil-container {
