--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -616,6 +616,7 @@ a {
 .nav li {
   display: inline-block;
   padding: 0px 20px;
+  font-size: 1.2em;
 }
 
 .nav li a {
@@ -661,30 +662,37 @@ a {
 }
 
 .banner {
-  overflow: hidden;
+  display: flex;
+  justify-content: center;
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-}
-
-.text-banner {
-  margin: 290px 50px 230px;
+  position: relative;
 }
 
 .text-banner {
   font-family: sans-serif;
+  text-align: start;
   color: white;
+  width: 100%;
   text-shadow: 0.5px 0.5px black;
   font-size: 24px;
+  margin: 290px 50px 230px;
 }
 
 .input-bar {
-  margin-top: 50px;
+  position: absolute;
   min-width: 600px;
   height: 60px;
   border: 2px solid white;
-  border-radius: 50px;
+  border-radius: 20px;
   padding: 0 30px;
+  bottom: -30px;
+}
+
+.input-bar::placeholder {
+  font-size: 2rem;
+  text-align: center;
 }
 
 .row {
@@ -701,7 +709,6 @@ a {
 }
 
 .banner2 {
-  overflow: hidden;
   /* background-image: url(/image/pineapple5.png); */
   background: #000;
 }
