--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -76,11 +76,9 @@ i:hover {
   transform: scale(1.1);
 }
 
-/* body {
-  line-height: 1.4rem;
-  background: var(--white);
-  color: var(--color-3);
-} */
+.content {
+  width: 100%;
+}
 
 .star-ranking img {
   width: 25px;
@@ -709,7 +707,6 @@ a {
 }
 
 .banner2 {
-  /* background-image: url(/image/pineapple5.png); */
   background: #000;
 }
 
