--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -16,6 +16,7 @@
   outline: none;
   border: none;
   text-decoration: none;
+  box-sizing: border-box;
 }
 ::selection {
   background: var(--color-1);
@@ -74,10 +75,6 @@ i {
 
 i:hover {
   transform: scale(1.1);
-}
-
-.content{
-  width: 100%;
 }
 
 .star-ranking img {
@@ -585,6 +582,7 @@ nav a {
   width: auto;
 } */
 
+/* CSS for Home address */
 app {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -611,21 +609,35 @@ a {
   list-style: none;
 }
 
+
 .nav li {
   display: inline-block;
-  padding: 0px 20px;
+  line-height: 60px;
+  margin: 0px 20px;
   font-size: 1.2em;
 }
 
 .nav li a {
   transition: all 0.3s ease 0s;
   color: black;
+  
 }
 
 .nav a:hover {
   color: blue;
 }
+/* new navigation */
+.navbar
+{
+  display: flex;
+  justify-content: space-between;
+  
+}
 
+.profile
+{
+  margin-left: 80px;
+}
 .profile-nav {
   display: flex;
   align-items: center;
@@ -707,11 +719,7 @@ a {
 }
 
 .banner2 {
-<<<<<<< HEAD
   
-=======
-  /* hello Jun*/
->>>>>>> 14a5c7f98a7cd6b80937e2fda4347ef0eb3f63f0
   background: #000;
 }
 
@@ -725,6 +733,87 @@ a {
   margin-bottom: 50px;
 }
 
+/* new responsive for navigation */
+.burger
+{
+  display: none;
+}
+.burger div
+{
+    width: 30px;
+    height: 3px;
+    background-color: #000;
+    margin: 5px;
+}
+
+@media screen and (max-width: 1000px)
+{
+  .nav
+  {
+    width: 20%;
+  }
+}
+
+@media screen and (max-width: 1000px)
+{
+  .header
+  {
+    overflow-x: hidden;
+  }
+  .logo
+  {
+    width: 60%;
+  }
+
+  .nav-bar
+  {
+    flex-direction: column;
+  }
+  .nav
+  {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 18vh;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-out; 
+  }
+  .nav li
+  {
+    opacity: 0;
+  }
+
+  .nav li a
+  {
+    color: #000;
+  }
+  .burger
+  {
+    display: block;
+  }
+}
+
+.nav-active
+{
+  transform: translateX(100%);
+}
+
+@keyframes navLinkFade 
+{
+  from{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
 .row1 {
   display: flex;
   flex-direction: row;
