--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -1,4 +1,4 @@
-:root {
+root {
   --color-1: #ff7b77;
   --color-2: #ffd0c4;
   --color-3: rgb(0, 22, 44);
@@ -16,7 +16,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  box-sizing: border-box;
 }
 ::selection {
   background: var(--color-1);
@@ -75,6 +74,10 @@ i {
 
 i:hover {
   transform: scale(1.1);
+}
+
+.content {
+  width: 100%;
 }
 
 .star-ranking img {
@@ -582,7 +585,6 @@ nav a {
   width: auto;
 } */
 
-/* CSS for Home address */
 app {
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -609,35 +611,21 @@ a {
   list-style: none;
 }
 
-
 .nav li {
   display: inline-block;
-  line-height: 60px;
-  margin: 0px 20px;
+  padding: 0px 20px;
   font-size: 1.2em;
 }
 
 .nav li a {
   transition: all 0.3s ease 0s;
   color: black;
-  
 }
 
 .nav a:hover {
   color: blue;
 }
-/* new navigation */
-.navbar
-{
-  display: flex;
-  justify-content: space-between;
-  
-}
 
-.profile
-{
-  margin-left: 80px;
-}
 .profile-nav {
   display: flex;
   align-items: center;
@@ -719,7 +707,7 @@ a {
 }
 
 .banner2 {
-  
+  /* hello Jun*/
   background: #000;
 }
 
@@ -733,100 +721,11 @@ a {
   margin-bottom: 50px;
 }
 
-/* new responsive for navigation */
-.burger
-{
-  display: none;
-}
-.burger div
-{
-    width: 30px;
-    height: 3px;
-    background-color: #000;
-    margin: 5px;
-}
-
-@media screen and (max-width: 1000px)
-{
-  .nav
-  {
-    width: 20%;
-  }
-}
-
-@media screen and (max-width: 1000px)
-{
-  .header
-  {
-    overflow-x: hidden;
-  }
-  .logo
-  {
-    width: 60%;
-  }
-
-  .nav-bar
-  {
-    flex-direction: column;
-  }
-  .nav
-  {
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 18vh;
-    background-color: #3e3ed6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-out; 
-  }
-  .nav li
-  {
-    opacity: 0;
-  }
-
-  .nav li a
-  {
-    color: #000;
-  }
-  .burger
-  {
-    display: block;
-  }
-}
-
-.nav-active
-{
-  transform: translateX(100%);
-}
-
-@keyframes navLinkFade 
-{
-  from{
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to{
-    opacity: 1;
-    transform: translateX(0px);
-  }
-}
-
-@media screen and (max-width: 700px)
-{
-  .banner{
-    border: 0px;
-    display: block;
-  }
-}
-
 .row1 {
   display: flex;
   flex-direction: row;
 }
+
 
 .column1 {
   margin: 20px;
@@ -855,24 +754,7 @@ a {
 }
 
 .footer {
-
   background-color: #f4f4f4;
-}
-
-.row-footer 
-{
-  display: flex;
-  flex-wrap: wrap;
-  padding: 1.25rem 1.875rem;
-}
-
-@media only screen and (max-width: 700px)
-{
-  .row-footer
-  {
-    justify-content: space-between;
-    justify-content: space-evenly;
-  }
 }
 .column3 {
   margin: 50px 20px 15px;
@@ -1115,4 +997,81 @@ body {
 
 .admin-title {
   text-align: center;
+}
+
+button.nav-button {
+  display: none;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 54px;
+  height: 54px;
+  background: transparent;
+  padding: 5px;
+}
+.nav-button .stripe{
+  display: block;
+  height: 4px;
+  width: 100%;
+  background-color: black;
+}
+
+/* responsive for top bar navigation */
+@media screen and (max-width: 700px) {
+  .row1{
+    flex-direction: column;
+  }
+  .input-bar{
+    min-width: 100%;
+    max-width: 100%;
+    margin: 0 1em;
+  }
+  .column1 a {
+    margin-left: 0;
+    margin: auto;
+  }
+  .text {
+    margin-left:0;
+  }
+  .nav.open {
+    height: calc( 100vh - 154px );
+  }
+  .nav {
+    position: fixed;
+    background-color: rgba(0,0,0,0.6);
+    top: 154px;
+    left:0;
+    /* min-height: calc( 100vh - 154px ); */
+    min-width: 100vw;
+    z-index: 999;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    overflow: hidden;
+    height: 0;
+    transition: height 0.5s;
+  }
+  .nav > li > a {
+    color: white;
+    padding: 1em;
+    display: block;
+  }
+  button.nav-button{
+    display: flex;
+    order: 4;
+  }
+  .banner
+  {
+    display: block;
+
+  }
+  .banner h1
+  {
+    max-width: 400px;
+   
+  }
+  input
+  {
+    min-width: 50%;
+  }
 }
