--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -17,6 +17,7 @@ root {
   border: none;
   text-decoration: none;
 }
+
 ::selection {
   background: var(--color-1);
 }
@@ -56,6 +57,7 @@ input[type='submit'] {
   font-size: 1.1rem;
   border-radius: 20px 6px 20px 20px;
 }
+
 button:hover,
 input[type='submit']:hover {
   background: var(--color-1);
@@ -88,6 +90,7 @@ i:hover {
   color: red;
   font-weight: bold;
 }
+
 .success {
   color: green;
   font-weight: bold;
@@ -122,6 +125,7 @@ i:hover {
   transition: 0.3s;
   box-shadow: 3px 3px 1px rgba(51, 51, 51, 0.418);
 }
+
 .connection-from ul li:hover {
   background: var(--color-1);
 }
@@ -293,7 +297,7 @@ i:hover {
   }
 }
 
-.profil-page .update-container > div {
+.profil-page .update-container>div {
   background: var(--color-4);
   border-radius: 20px;
   padding: 25px;
@@ -301,7 +305,7 @@ i:hover {
 }
 
 @media screen and (max-width: 700px) {
-  .profil-page .update-container > div {
+  .profil-page .update-container>div {
     margin: 10px 10px;
   }
 }
@@ -595,6 +599,7 @@ a {
   font-family: sans-serif;
   text-decoration: none;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -625,6 +630,7 @@ a {
 .nav a:hover {
   color: blue;
 }
+
 .profile-nav {
   display: flex;
   align-items: center;
@@ -755,6 +761,7 @@ a {
 .footer {
   background-color: #f4f4f4;
 }
+
 .column3 {
   margin: 50px 20px 15px;
   padding-left: 50px;
@@ -783,9 +790,11 @@ a {
 .course-photo {
   width: 100%;
 }
+
 .star img {
   width: 100%;
 }
+
 .star-image {
   max-width: 20px;
   margin-bottom: 10px;
@@ -852,21 +861,12 @@ a {
   padding: 10px 20px;
   transition: 0.2s;
 }
-.popup-profil-container
-  .modal
-  .connection-form
-  .form-container
-  ul
-  .active-btn:hover {
+
+.popup-profil-container .modal .connection-form .form-container ul .active-btn:hover {
   background: var(--color-2);
 }
 
-.popup-profil-container
-  .modal
-  .connection-form
-  .form-container
-  ul
-  li:not(.active-btn):hover {
+.popup-profil-container .modal .connection-form .form-container ul li:not(.active-btn):hover {
   transform: translateX(3px);
 }
 
@@ -882,12 +882,7 @@ a {
   border-radius: 20px;
 }
 
-.popup-profil-container
-  .modal
-  .connection-form
-  .form-container
-  form
-  input:focus {
+.popup-profil-container .modal .connection-form .form-container form input:focus {
   box-shadow: 0 0 3px rgba(51, 51, 51, 0.2);
 }
 
@@ -992,7 +987,6 @@ body {
 .photo-course-subject {
   max-width: 16rem;
   border: solid 4px black;
-  
 }
 
 .admin-title {
@@ -1001,7 +995,7 @@ body {
 
 button.nav-button {
 
-  
+
   display: none;
   flex-direction: column;
   justify-content: space-evenly;
@@ -1010,7 +1004,8 @@ button.nav-button {
   background: transparent;
   padding: 5px;
 }
-.nav-button .stripe{
+
+.nav-button .stripe {
   display: block;
   height: 4px;
   width: 100%;
@@ -1019,29 +1014,62 @@ button.nav-button {
 
 /* responsive for top bar navigation */
 @media screen and (max-width: 700px) {
-  .row1{
+  .row1 {
     flex-direction: column;
   }
-  .input-bar{
-    min-width: 100%;
+  input.input-bar {
+    min-width: auto;
     max-width: 100%;
-    margin: 0 1em;
+    margin: 1em;
+    position: static;
+    background-color: white;
+    font-size: 1rem;
+    padding: 0.5rem;
+    height: auto;
+  }
+  .input-bar::-webkit-input-placeholder {
+    font-size: small;
+  }
+  .column1 {
+    margin: 10px;
   }
   .column1 a {
     margin-left: 0;
     margin: auto;
   }
+  .row2 {
+    flex-direction: column;
+  }
+  .column2 {
+    max-width: auto;
+    min-width: 100%;
+    margin: 0;
+  }
+  .row {
+    flex-direction: column;
+  }
+  .column {
+    margin: 0;
+  }
+  .column3 {
+    margin: 0;
+    max-width: 100%;
+    padding: 10px;
+  }
+
   .text {
-    margin-left:0;
+    margin-left: 0;
   }
+
   .nav.open {
-    height: calc( 100vh - 154px );
+    height: calc(100vh - 154px);
   }
+
   .nav {
     position: fixed;
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0, 0, 0, 0.8);
     top: 154px;
-    left:0;
+    left: 0;
     /* min-height: calc( 100vh - 154px ); */
     min-width: 100vw;
     z-index: 999;
@@ -1053,15 +1081,18 @@ button.nav-button {
     height: 0;
     transition: height 0.5s;
   }
-  .nav > li > a {
+
+  .nav>li>a {
     color: white;
     padding: 1em;
     display: block;
   }
-  button.nav-button{
+
+  button.nav-button {
     display: flex;
     order: 4;
   }
+
   .banner 
   {
     /* display: block; */
