--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -297,7 +297,7 @@ i:hover {
   }
 }
 
-.profil-page .update-container>div {
+.profil-page .update-container > div {
   background: var(--color-4);
   border-radius: 20px;
   padding: 25px;
@@ -305,7 +305,7 @@ i:hover {
 }
 
 @media screen and (max-width: 700px) {
-  .profil-page .update-container>div {
+  .profil-page .update-container > div {
     margin: 10px 10px;
   }
 }
@@ -630,7 +630,6 @@ a {
 .nav a:hover {
   color: blue;
 }
-<<<<<<< HEAD
 /* new navigation */
 .navbar {
   display: flex;
@@ -640,9 +639,6 @@ a {
 .profile {
   margin-left: 80px;
 }
-=======
-
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
 .profile-nav {
   display: flex;
   align-items: center;
@@ -724,10 +720,6 @@ a {
 }
 
 .banner2 {
-<<<<<<< HEAD
-=======
-  /* hello Jun*/
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
   background: #000;
 }
 
@@ -741,7 +733,6 @@ a {
   margin-bottom: 50px;
 }
 
-<<<<<<< HEAD
 /* new responsive for navigation */
 .burger {
   display: none;
@@ -827,8 +818,6 @@ a {
   }
 }
 
-=======
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
 .row1 {
   display: flex;
   flex-direction: row;
@@ -863,7 +852,6 @@ a {
 .footer {
   background-color: #f4f4f4;
 }
-<<<<<<< HEAD
 
 .row-footer {
   display: flex;
@@ -877,9 +865,6 @@ a {
     justify-content: space-evenly;
   }
 }
-=======
-
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
 .column3 {
   margin: 50px 20px 15px;
   padding-left: 50px;
@@ -980,11 +965,21 @@ a {
   transition: 0.2s;
 }
 
-.popup-profil-container .modal .connection-form .form-container ul .active-btn:hover {
+.popup-profil-container
+  .modal
+  .connection-form
+  .form-container
+  ul
+  .active-btn:hover {
   background: var(--color-2);
 }
 
-.popup-profil-container .modal .connection-form .form-container ul li:not(.active-btn):hover {
+.popup-profil-container
+  .modal
+  .connection-form
+  .form-container
+  ul
+  li:not(.active-btn):hover {
   transform: translateX(3px);
 }
 
@@ -1000,7 +995,12 @@ a {
   border-radius: 20px;
 }
 
-.popup-profil-container .modal .connection-form .form-container form input:focus {
+.popup-profil-container
+  .modal
+  .connection-form
+  .form-container
+  form
+  input:focus {
   box-shadow: 0 0 3px rgba(51, 51, 51, 0.2);
 }
 
@@ -1112,8 +1112,6 @@ body {
 }
 
 button.nav-button {
-
-
   display: none;
   flex-direction: column;
   justify-content: space-evenly;
@@ -1122,10 +1120,6 @@ button.nav-button {
   background: transparent;
   padding: 5px;
 }
-<<<<<<< HEAD
-=======
-
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
 .nav-button .stripe {
   display: block;
   height: 4px;
@@ -1138,13 +1132,8 @@ button.nav-button {
   .row1 {
     flex-direction: column;
   }
-<<<<<<< HEAD
   .input-bar {
     min-width: 100%;
-=======
-  input.input-bar {
-    min-width: auto;
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
     max-width: 100%;
     margin: 1em;
     position: static;
@@ -1193,11 +1182,7 @@ button.nav-button {
 
   .nav {
     position: fixed;
-<<<<<<< HEAD
     background-color: rgba(0, 0, 0, 0.6);
-=======
-    background-color: rgba(0, 0, 0, 0.8);
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
     top: 154px;
     left: 0;
     /* min-height: calc( 100vh - 154px ); */
@@ -1212,39 +1197,13 @@ button.nav-button {
     transition: height 0.5s;
   }
 
-  .nav>li>a {
+  .nav > li > a {
     color: white;
     padding: 1em;
     display: block;
   }
-<<<<<<< HEAD
-=======
-
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
   button.nav-button {
     display: flex;
     order: 4;
   }
-<<<<<<< HEAD
 }
-=======
-
-  .banner {
-    /* display: block; */
-    flex-direction: column;
-    aspect-ratio: 1/1 ;
-  }
-
-  .text-banner {
-    font-size: 1.5ch;
-    text-align: center;
-  }
-
-  input {
-    min-width: 50%;
-  }
-  .text-banner {
-    margin:auto;
-  }
-}
->>>>>>> 590da68d1348e19c137d78538fba9ede80f7395a
