--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -86,6 +86,12 @@ i:hover {
   width: 25px;
 }
 
+.star-ranking {
+  display: flex;
+  gap: 0.1em;
+  align-content: center;
+}
+
 .error {
   color: red;
   font-weight: bold;
@@ -747,6 +753,24 @@ a {
   flex-direction: row;
 }
 
+.row3 > * {
+  flex: 1 1 360px;
+}
+
+.row3 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column3 {
+  font-family: sans-serif;
+  text-align: center;
+  max-width: 50%;
+  background-color: #f4f4f4;
+  margin: 10px;
+  padding: 1rem;
+}
+
 .column2 {
   flex: 1;
   font-family: sans-serif;
@@ -1024,6 +1048,13 @@ button.nav-button {
   background-color: black;
 }
 
+.center-course {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+}
+
 /* responsive for top bar navigation */
 @media screen and (max-width: 700px) {
   .row1 {
@@ -1119,6 +1150,7 @@ button.nav-button {
   input {
     min-width: 50%;
   }
+
   .text-banner {
     margin: auto;
   }
