--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -734,17 +734,17 @@ a {
 .row1 {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .column1 {
-  margin: 20px;
-  margin-right: 150px;
+  margin: 30px;
   flex: 1;
   font-family: sans-serif;
 }
 
 .column1 a {
-  margin-left: 370px;
+  margin-left: 470px;
 }
 
 .row2 {
@@ -1141,4 +1141,119 @@ button.nav-button {
   {
     margin:auto;
   }
+}
+
+/* CSS for course page */
+.course-content
+{
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.row-course 
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.column-course
+{
+  margin: 60px ;
+
+}
+
+.course-search-bar
+{
+  justify-content: center;
+  text-align: center;
+ 
+}
+.course-input-bar
+{
+  min-width: 600px;
+  height: 60px;
+  border: 2px solid white;
+  border-radius: 20px;
+  padding: 0 30px;
+  text-align: center;
+}
+
+.course-input-bar::placeholder {
+  font-size: 1rem;
+  text-align: center;
+}
+
+.search-dropdown
+{
+  position: relative;
+  width: 200px;
+  margin: 15px auto;
+}
+
+.search-dropdown .dropdown-list
+{
+  background:#fff;
+  border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+}
+
+.search-dropdown .dropdown-list::before
+{
+  content: "";
+  position: absolute;
+  top: 18px;
+  right: 18px;
+  width: 6px;
+  height: 6px;
+  border: 2px solid;
+  border-color: transparent transparent #555 #555;
+  transform: rotate(-45deg);
+}
+.search-dropdown .dropdown-list li
+{
+  padding: 10px 20px;
+}
+.search-dropdown ul
+{
+  position: absolute;
+  top: 55px;
+  left: 0;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.search-dropdown .select-dropdown
+{
+  position: absolute;
+  top: 55px;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  display: none;
+}
+
+.search-dropdown .select-dropdown li
+{
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.search-dropdown .select-dropdown li:hover
+{
+  background: #000;
+  color: #eee;
+}
+
+.search-dropdown.active .dropdown-list::before
+{
+  top: 15px;
+  transform: rotate(-45deg);
+}
+
+.search-dropdown.active .dropdown-list
+{
+  display: block;
 }
