--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -743,7 +743,7 @@ a {
 .row1 {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .column1 {
@@ -1347,6 +1347,8 @@ button.nav-button {
   display: block;
 }
 
+
+/* CSS for news page */
 .column-news1
 {
   /* margin: 100px 150px 100px; */
@@ -1360,6 +1362,20 @@ button.nav-button {
   padding-bottom: 1rem;
 }
 
+.column-news2 {
+  flex: 1;
+  font-family: sans-serif;
+  max-width: 50%;
+  background-color: #f4f4f4;
+  margin: 10px;
+  margin-bottom: 30px;
+  padding: 1rem;
+}
+
+.column-news2 p
+{
+  padding: 10px 0px 20px;
+}
 .slide-frame
 {
   height: 420px;
@@ -1433,4 +1449,39 @@ button.nav-button {
   margin-right: 40px;
 }
 
+/* responsive css continued */
+@media screen and (max-width: 790px) 
+{
+  .column-course
+  {
+    margin: 0;
+  }
+  .search-dropdown
+  {
+    display: none;
+  }
 
+  input.course-input-bar {
+    min-width: auto;
+    max-width: 100%;
+    margin: 1em;
+    position: static;
+    background-color: white;
+    font-size: 1rem;
+    padding: 0.5rem;
+    height: auto;
+  }
+  .column1
+  {
+    margin: 10px;
+    margin-right: auto;
+  }
+
+  .column-news2
+  {
+    max-width: auto;
+    min-width: 100%;
+    margin: 0;
+  }
+
+}
