--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -759,6 +759,7 @@ a {
 .row2 {
   display: flex;
   flex-direction: row;
+
 }
 
 .row3 > * {
@@ -1449,6 +1450,37 @@ button.nav-button {
   margin-right: 40px;
 }
 
+/* CSS for About us page */
+.row-about
+{
+  display: flex;
+  flex-direction: row;
+}
+
+.row-about h1{
+  margin: 20px;
+}
+.column-about
+{
+    flex: 1;
+    font-family: sans-serif;
+    margin: 10px;
+    padding: 1rem;
+}
+.row-about1 
+{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  align-items: center;
+  background-color: #f6f6f6;
+  margin: 20px;
+}
+.profile-img
+{
+  width: 40%;
+}
+
 /* responsive css continued */
 @media screen and (max-width: 790px) 
 {
@@ -1482,6 +1514,11 @@ button.nav-button {
     max-width: auto;
     min-width: 100%;
     margin: 0;
+  }
+
+  .row-about1
+  {
+    flex-direction: column;
   }
 
 }
